# QyberSafe

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.dev  Doxyfile  Doxyfile.bak  LICENSE  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  qybersafe.pc.in
.github/workflows/: ci.yml  wheels.yml
cmake/: liboqs.cmake
python/: setup.py
python/qybersafe/: __init__.py  exceptions.py  kyber.py
python/tests/: test_envelope.py
src/: bindings.cpp
src/benchmarks/: CMakeLists.txt
src/examples/: dilithium_example.cpp  error_handling_example.cpp  hybrid_example.cpp  kyber_example.cpp  raii_example.cpp
src/include/qybersafe/: qybersafe.h
src/include/qybersafe/core/: aead.h  crypto_types.h  exceptions.h  secure_random.h
src/include/qybersafe/dilithium/: dilithium_sig.h
src/include/qybersafe/hybrid/: hybrid_encryption.h
src/include/qybersafe/kyber/: kyber_kem.h
src/include/qybersafe/sphincsplus/: sphincsplus_sig.h
src/include/qybersafe/utils/: base64.h  hex.h
src/src/: CMakeLists.txt
src/src/api/: qybersafe_api.cpp
src/src/core/: aead.cpp  crypto_types.cpp  memory.cpp  secure_random.cpp
src/src/dilithium/: dilithium_sig.cpp
src/src/hybrid/: hybrid_encryption.cpp
src/src/kyber/: kyber_kem.cpp
src/src/sphincsplus/: sphincsplus_sig.cpp
src/src/utils/: base64.cpp  hex.cpp
src/tests/: CMakeLists.txt  test_crypto_types.cpp  test_dilithium.cpp  test_envelope.cpp  test_hybrid.cpp  test_kyber.cpp  test_memory.cpp  test_secure_random.cpp  test_sphincsplus.cpp
website-qybersafe/: package.json  pnpm-lock.yaml
website-qybersafe/app/: globals.css  layout.tsx  page.tsx
website-qybersafe/app/auth/signin/: page.tsx
website-qybersafe/app/auth/signup/: page.tsx
website-qybersafe/app/dashboard/: page.tsx
website-qybersafe/components/: features-minimal.tsx  footer-minimal.tsx  hero-minimal-updated.tsx  hero-minimal.tsx  mode-toggle.tsx  navbar.tsx  pricing-minimal.tsx  testimonials-minimal.tsx
website-qybersafe/components/animations/: fade-in.tsx  scroll-reveal.tsx  section-transition.tsx  stagger-container.tsx  three-background.tsx
website-qybersafe/lib/: auth.ts
