[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "qybersafe"
version = "0.1.0a3"
description = "Post-quantum cryptography for Python: ML-KEM, ML-DSA, SLH-DSA, and hybrid encryption"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "QyberSafe contributors" }]
keywords = [
    "cryptography",
    "post-quantum",
    "pqc",
    "ml-kem",
    "ml-dsa",
    "slh-dsa",
    "kyber",
    "dilithium",
    "sphincs",
    "hybrid-encryption",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/Nathandona/QyberSafe"
Source = "https://github.com/Nathandona/QyberSafe"
Issues = "https://github.com/Nathandona/QyberSafe/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.16"
# Build only the extension module (and its dependencies); skip tests/examples.
build.targets = ["qybersafe_python"]
# Ship the Python package sources alongside the compiled module.
wheel.packages = ["python/qybersafe"]

[tool.scikit-build.cmake.define]
QYBERSAFE_BUILD_PYTHON = "ON"
QYBERSAFE_INSTALL_CXX = "OFF"
BUILD_TESTS = "OFF"
BUILD_EXAMPLES = "OFF"
BUILD_DOCUMENTATION = "OFF"
ENABLE_CLANG_TIDY = "OFF"

[tool.cibuildwheel]
# Out of scope: musl, PyPy, and 32-bit targets.
skip = ["*-musllinux_*", "pp*", "*_i686", "*-win32"]
build-verbosity = 1
test-requires = "pytest"
# Run from a temp dir (cibuildwheel default) so the installed wheel is imported.
test-command = "python -m pytest {project}/python/tests"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
# Build OpenSSL as static libraries and link them into the extension, so the
# wheel carries no shared libcrypto. A bundled shared libcrypto clashes with the
# one CPython itself loads (hashlib/ssl), which broke the EVP HKDF path at
# runtime ("HKDF setup failed"). Static linking with hidden visibility isolates
# our OpenSSL entirely.
before-all = """
( command -v dnf >/dev/null 2>&1 && dnf install -y perl-IPC-Cmd perl-Data-Dumper ) || ( command -v microdnf >/dev/null 2>&1 && microdnf install -y perl-IPC-Cmd perl-Data-Dumper ) || yum install -y perl-IPC-Cmd perl-Data-Dumper
curl -sSL https://github.com/openssl/openssl/releases/download/openssl-3.0.16/openssl-3.0.16.tar.gz -o /tmp/openssl.tar.gz
cd /tmp && tar xf openssl.tar.gz && cd openssl-3.0.16
./Configure no-shared no-tests --prefix=/opt/ossl --libdir=lib linux-x86_64
make -j"$(nproc)"
make install_sw
"""
environment = { OPENSSL_ROOT_DIR = "/opt/ossl", CMAKE_ARGS = "-DOPENSSL_USE_STATIC_LIBS=ON" }
# Verbose repair lists offending symbols if auditwheel cannot retarget the ABI.
repair-wheel-command = "auditwheel -v repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# Homebrew's openssl@3 ships static libraries; link them in so the wheel is
# self-contained (macOS uses the stable system libc++, so no libstdc++ concern).
before-all = "brew install openssl@3"
environment = { OPENSSL_ROOT_DIR = "$(brew --prefix openssl@3)", CMAKE_ARGS = "-DOPENSSL_USE_STATIC_LIBS=ON", MACOSX_DEPLOYMENT_TARGET = "11.0" }
